<resources>
    <string name="app_name">优云</string>
    <string name="createGroup">创建群组</string>
    <string name="zXing">扫码连接</string>
    <string name="searchConnect">搜索连接</string>
    <string name="trans_record">传输记录</string>
    <string name="sendRecord">发送记录</string>
    <string name="receiveRecord">接收记录</string>
    <string name="sendFile">发送文件</string>
    <string name="disConnect">断开连接</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">登录</string>

    <string name="loading">正在加载</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="load_end">没有更多数据</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="file_info_item_example_file_name">关于那件事.mp3</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="i_want_to_send">我要发送</string>
    <string name="i_want_to_receive">我要接收</string>
    <string name="QRCode">二维码</string>
    <string name="addFile">添加文件</string>
    <string name="scan_qr_code">扫描二维码</string>

    <string name="scan_qr_code_helper">将二维码放入框内即可自动扫描</string>
    <string name="exit_tip">退出将中断传输，确定退出？</string>
    <string name="upload_setting">上传设置</string>
    <string name="device_file">本机文件</string>
    <string name="please_input_allow_download_count">请输入可下载次数</string>
    <string name="infinite">无限次</string>
    <string name="cancelTip">确定取消？</string>
    <string name="just_a_bg">just a bg</string>
    <string name="getFile">提取文件</string>
    <string name="please_input_code">请输入提取码</string>
    <string name="downloadFile">下载文件</string>
    <string name="concern">关注</string>
    <string name="file_detail">文件详情</string>
    <string name="code">提取码</string>
    <string name="already_pause">已暂停</string>
    <string name="trans_error">传输出错</string>
    <string name="delete">删除</string>
    <string name="file_download_success">文件下载完成</string>
    <string name="file_download_error">文件下载失败</string>
    <string name="upload_error">上传失败</string>
    <string name="upload_success">上传成功</string>
    <string name="QQ">QQ</string>
    <string name="copy_link">复制链接</string>
    <string name="QQ_ZONE">QQ空间</string>
    <string name="WE_CHAT">微信</string>
    <string name="FRIEND_CIRCLE">朋友圈</string>
    <string name="link_already_copy_to_clipbpard">链接已复制到剪切板</string>
    <string name="copy_code">复制提取码</string>
    <string name="code_already_copy_to_clipbpard">提取码已复制到剪切板</string>
    <string name="phone_number">手机号</string>
    <string name="pass">密码</string>
    <string name="register">注册</string>
    <string name="new_pass">新密码</string>
    <string name="confirm_code">验证码</string>
    <string name="click_send">点击发送</string>
    <string name="please_complete_info">请将信息填写完整</string>
    <string name="please_input_correct_phone_number">请输入正确的手机号</string>
    <string name="phone_number_not_allow_empty">手机号不能为空</string>
    <string name="forget_pass">忘记密码?</string>
    <string name="confirm_pass">确认密码</string>
    <string name="please_input_correct_identify_code">请输入正确的提取码\n温馨提示：小优的提取码是6位短号哦</string>
    <string name="error">出错</string>
    <string name="trans_item_share_icon">share_icon</string>

    <string name="activity_trans_anim_duration">300</string>
    <string name="xxs_share">的分享</string>
    <string name="searching">正在搜索...</string>
    <string name="person_center">个人中心</string>
    <string name="exit">退出</string>
    <string name="select_photo">选择图片</string>
    <string name="get_fail">获取失败</string>
    <string name="select_avatar">选择头像</string>
    <string name="user_exit_tip">退出将清空用户数据，确认退出？</string>
    <string name="setting">设置</string>
    <string name="edit_nickname">修改昵称</string>
    <string name="about_youyun">关于优云</string>
    <string name="mine_share_avatar">mine_share_avatar</string>
    <string name="mine_share_nickname">mine_share_nickname</string>
    <string name="mine_share_item">mine_share_item</string>
    <string name="click_here_to_login">点此登录</string>
    <string name="back">返回</string>
    <string name="select_all">全选</string>
    <string name="loading_">loading</string>
    <string name="dynamic_header">dynamic header</string>
    <string name="my_concern">关注的人</string>
    <string name="detail_info">详细信息</string>
    <string name="comment">评论</string>
    <string name="share_from_youyun">来自优云的分享~</string>
    <string name="my_collection">我的收藏</string>
    <string name="file_manager">文件管理</string>
    <string name="install_package">安装包</string>
    <string name="compression_pack">压缩包</string>
    <string name="vedio">视频</string>
    <string name="music">音乐</string>
    <string name="picture">图片</string>
    <string name="document">文档</string>
    <string name="web_page">网页</string>
    <string name="other">其他</string>
    <string name="my_file">我的文件</string>
    <string name="please_select_operator">请选择操作</string>
    <string name="share">分享</string>
    <string name="move">移动</string>
    <string name="rename">重命名</string>
    <string name="all">全部</string>
    <string name="hot">热门</string>
    <string name="finding_square">发现广场</string>
    <string name="uploader">上传者</string>
    <string name="send">发送</string>
    <string name="add_comment">添加评论</string>
    <string name="login_first">请先登陆^*^</string>
    <string name="message">消息</string>
    <string name="zan">赞</string>
    <string name="not_alow_empty">不允许为空</string>
    <string name="concern_num">关注%1$s%2$d</string>
    <string name="fans_num">粉丝%1$s%2$d</string>
    <string name="already_concern">已关注</string>
    <string name="cancel_concern">取消关注</string>
    <string name="person_setting">个人设置</string>
    <string name="change_avatar">更换头像</string>
    <string name="change_nickname">更改昵称</string>
    <string name="change_signature">更改个签</string>
    <string name="person_info_edit">个人资料编辑</string>
    <string name="save">保存</string>
    <string name="search_hint">文件名/用户名/手机号/邮箱</string>
    <string name="file">文件</string>
    <string name="user">用户</string>
    <string name="collection">收藏</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="is_public">是否公开</string>
    <string name="effect_date">有效日期</string>
    <string name="forever">永久</string>
    <string name="expire_time">截止日期</string>
    <string name="allow_download_count">可下载次数</string>
    <string name="max">无限次</string>
    <string name="custom">自定义</string>
    <string name="download_score">下载积分</string>
    <string name="none">无</string>
    <string name="add_your_description">添加你的描述</string>
    <string name="add_description">添加描述</string>
    <string name="click_it_to_edit_signature">点此编辑个签</string>
    <string name="edit_signature">编辑个签</string>
    <string name="edit_signature_success">修改个签成功</string>
    <string name="already_collect">收藏了</string>
    <string name="already_share">分享了</string>
    <string name="already_upload">上传了</string>
    <string name="already_download">下载了</string>
    <string name="modify_success">修改成功</string>
    <string name="add_message">添加消息</string>
    <string name="pull_refresh">下拉刷新</string>
    <string name="release_refresh">释放刷新</string>
    <string name="pull_down_load">下拉加载</string>
    <string name="star_record">点赞记录</string>
    <string name="comment_record">评论记录</string>
    <string name="have_new_message">有新消息</string>
    <string name="private_letter">私信</string>
    <string name="re_login_tip"><![CDATA[登录失效，请重新登录>.<]]></string>
    <string name="dynamic">动态</string>
    <string name="root_path">根目录</string>
    <string name="create_new_directory">新建文件夹</string>
    <string name="upload_file_to_here">上传文件</string>
    <string name="select">选择</string>
    <string name="please_input_new_name">请输入新的名字</string>
    <string name="change_fail">修改失败</string>
    <string name="move_fail">移动失败</string>
    <string name="select_directory">选择文件夹</string>
    <string name="upload_to">上传到</string>
    <string name="classification_display">分类查看</string>
    <string name="download_now">立即下载</string>
    <string name="look_comment">查看评论</string>
    <string name="collect_success">收藏成功</string>
    <string name="cancel_collect_success">取消收藏成功</string>
    <string name="nothing_to_live">什么都没留下~</string>
    <string name="already_cancel">已取消</string>
    <string name="cancel_select_all">取消全选</string>
    <string name="count_setting">账户设置</string>
    <string name="qq_count">QQ</string>
    <string name="change_password">更改密码</string>
    <string name="not_bind">未绑定</string>
    <string name="email">邮箱</string>
    <string name="qr_for_share">qr for share</string>
    <string name="share_success">分享成功</string>
    <string name="share_qr">分享二维码</string>
    <string name="share_link">分享链接</string>
    <string name="directory_share_is_not_supported">暂时还不支持文件夹分享</string>
    <string name="finding_item_avatar">finding_item_avatar</string>
    <string name="share_finding_item">share_finding_item</string>
</resources>
