<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textSize="11sp"
        android:textColor="@color/text_gray"
        android:text="@string/please_select_operator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="40dp"
        android:layout_height="23dp"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rect_stroke_transpaent"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="0dp"
        style="@style/PersonFileManagerOptionsGrayButtonStyle"
        android:text="@string/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/btn_move"
        android:layout_width="0dp"
        style="@style/PersonFileManagerOptionsGrayButtonStyle"
        android:text="@string/move"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_share" />

    <Button
        android:id="@+id/btn_rename"
        android:layout_width="0dp"
        style="@style/PersonFileManagerOptionsGrayButtonStyle"
        android:text="@string/rename"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_move" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="0dp"
        style="@style/PersonFileManagerOptionsRedButtonStyle"
        android:text="@string/delete"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rename" />
</android.support.constraint.ConstraintLayout>