<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/circle_rect_bg"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="@dimen/dialog_height">

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:srcCompat="@drawable/icon_transfer_back"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="240dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/text_gray"
        android:text="@string/exit_tip"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/img_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_cancel"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_text"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_sure"
        android:textSize="14sp"
        android:textColor="@color/text_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="44dp"
        android:layout_marginEnd="44dp"
        android:text="@string/sure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_text"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>